# orthanc-mssql-storage-plugin

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  bootstrap.sh  build.sh  docker-compose.yml
cmake/: FindJsonCpp.cmake  FindOrthanc.cmake
plugin/: CMakeLists.txt  Configuration.cpp  Configuration.h  Plugin.cpp  SqlServerStorageArea.cpp  SqlServerStorageArea.h  SqlServerStorageConnection.cpp  SqlServerStorageConnection.h  SqlServerStorageException.h
plugin/resources/: sql-server-storage.json
tests/: CMakeLists.txt  StorageTest.cpp
triplets/: x64-linux-fpic.cmake
